"section" tag sollte auch mit section abschließen, nicht mit div

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         }}});</script><div id="ft-insta-brd"><a href="https://fouita.com/website-widgets/instagram-feed" target="_blank">Instagram Feed</a><a href="https://fouita.com" target="_blank">powered by Fouita</a>
       </div>
     </div>
-  </div>
+  </section>
 
   <!-- Copyright/Impressum -->
   <div class="block is-hvcentered">
