--- a/index.html
+++ b/index.html
@@ -154,25 +154,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <h3 class="title is-2"><i class="fa-brands fa-instagram" aria-label="Instagram"></i> Instagram</h3>
         </a>
       </div>
-      <!-- Fouita free Instagram widget from https://fouita.com/embed-instagram-feed-free -->
-      <div id="ft-insta-app"></div><script type="module">
-        import App from "https://cdn.fouita.com/public/instagram-feed.js?11";
-        new App({target: document.getElementById("ft-insta-app"),props:{"settings":{
-          "layout": "carousel",
-          "source": "insta",
-          "selected": "uname",
-          "header": false,
-          "autoplay": true,
-          "zigzag": false,
-          "cols": 4,
-          "cardHeight": 300,
-          "gap": 0,
-          "direction": "down",
-          "height": 700,
-          "bgColor": "",
-          "txtColor": "",
-          "ukey":"bdad9f65-bd71-4f25-b2c3-fe29ab267e63"
-        }}});</script><div id="ft-insta-brd"><a href="https://fouita.com/website-widgets/instagram-feed" target="_blank">Instagram Feed</a><a href="https://fouita.com" target="_blank">powered by Fouita</a>
+      <div class="content is-hvcentered">
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="//lightwidget.com/widgets/23acbcbaa1845c998a394765cea79a33.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
       </div>
     </div>
   </section>
